force-app/main/default/objects/ffr__fflib_BatchProcess__c/ffr__fflib_BatchProcess__c.object-meta.xml
<CustomObject>
    <label>FFR Batch Process</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FFR Batch Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>