force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__ApexJobID__c.field-meta.xml
<CustomField>
    <fullName>ffr__ApexJobID__c</fullName>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>