force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__BatchControlRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffr__BatchControlRecordID__c</fullName>
    <label>Batch Control Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>