force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__ConcurrencyModeUniqueID__c.field-meta.xml
<CustomField>
    <fullName>ffr__ConcurrencyModeUniqueID__c</fullName>
    <label>Concurrency Mode Unique ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>