force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__FailedRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffr__FailedRecordID__c</fullName>
    <label>Failed Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>