force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ffr__ProcessName__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>