force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__ProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>ffr__ProgressInformation__c</fullName>
    <label>Progress Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>