force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__SuccessfulRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffr__SuccessfulRecordID__c</fullName>
    <label>Successful Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>