force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__TotalChainNumber__c.field-meta.xml
<CustomField>
    <fullName>ffr__TotalChainNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deprecated: Total Chain Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>