force-app/main/default/objects/ffr__fflib_BatchProcess__c/fields/ffr__UseDefaultConstructor__c.field-meta.xml
<CustomField>
    <fullName>ffr__UseDefaultConstructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Constructor</label>
    <type>Checkbox</type>
</CustomField>