force-app/main/default/objects/ffr__fflib_BatchProcess__c/listViews/ffr__All.listView-meta.xml
<ListView>
    <fullName>ffr__All</fullName>
    <columns>NAME</columns>
    <columns>ffr__Status__c</columns>
    <columns>ffr__ApexJobClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>