force-app/main/default/objects/ffr__fflib_BatchProcess__c/listViews/ffr__All1.listView-meta.xml
<ListView>
    <fullName>ffr__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>